--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xng-breadcrumb": "^10.0.2",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
