--- a/client/angular.json
+++ b/client/angular.json
@@ -38,9 +38,11 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "node_modules/bootswatch/dist/united/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/ngx-spinner/animations/timer.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
