--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,12 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=skinet.db",
+    "IdentityConnection": "Data source=identity.db",
     "Redis": "localhost"
+  },
+  "Token": {
+    "Key": "super secret key !@#$%^&*()(*asdasdassuper secret key !@#$%^&*()(*asdasdassuper secret key !@#$%^&*()(*asdasdas",
+    "Issuer": "https://localhost:5001"
   },
   "ApiUrl": "https://localhost:5001/"
 }
