--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -5,6 +5,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.13" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.2.0" />
       <PackageReference Include="StackExchange.Redis" Version="2.7.17" />
+      <PackageReference Include="Stripe.net" Version="43.14.0" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
   </ItemGroup>
 
