--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@stripe/stripe-js": "^2.4.0",
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.2",
     "cuid": "^3.0.0",
