--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,13 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=skinet.db",
-    "IdentityConnection": "Data source=identity.db",
-    "Redis": "localhost"
+    "DefaultConnection": "Server=188.213.133.67;Database=marinasn_skinet;User Id=marinasn_skinet;Password=Pa$$w0rd1234.$;",
+    "IdentityConnection": "Server=188.213.133.67;Database=marinasn_identity;User Id=marinasn_skinet;Password=Pa$$w0rd1234.$;",
+    "Redis": "redis-18573.c325.us-east-1-4.ec2.cloud.redislabs.com:18573,password=7RsizL04KNaC06q3qdXM2tws4zzNHH0W"
   },
   "Token": {
     "Key": "super secret key !@#$%^&*()(*asdasdassuper secret key !@#$%^&*()(*asdasdassuper secret key !@#$%^&*()(*asdasdas",
     "Issuer": "https://localhost:5001"
   },
-  "ApiUrl": "https://localhost:5001/"
+  "ApiUrl": "https://skinet.marinashub.ro/Content/"
 }
