--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -4,6 +4,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.13" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.2.0" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
       <PackageReference Include="StackExchange.Redis" Version="2.7.17" />
       <PackageReference Include="Stripe.net" Version="43.14.0" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
@@ -14,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Data\SeedData\**" CopyToOutputDirectory="PreserveNewest" />
     <Folder Include="Data\SeedData\" />
     <Folder Include="Identity\Migrations\" />
   </ItemGroup>
